<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:searchIcon="@drawable/ic_search"
        app:closeIcon="@drawable/ic_close_search"
        app:iconifiedByDefault="false"
        android:gravity="center_vertical"
        app:queryHint="@string/album_search"
        android:layout_marginEnd="@dimen/margin_sl"
        android:layout_marginStart="@dimen/margin_sl"
        app:layout_constraintEnd_toStartOf="@+id/iv_trie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_trie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trie"
        android:padding="@dimen/margin_sl"
        android:layout_marginEnd="@dimen/margin_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/album_sort" />

</androidx.constraintlayout.widget.ConstraintLayout>